--- a/Capstone_Project_Notebook.ipynb
+++ b/Capstone_Project_Notebook.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## This notebook will be mainly used for the capstone project"
+    "## I'll be using this notebook, and the repository, mainly for the Capstone Project"
    ]
   },
   {
